git commit -m "repeating singleton"